--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@codemirror/state": "^6.3.2",
 		"@webcontainer/api": "^1.1.8",
 		"codemirror": "^6.0.1",
-		"marked": "^10.0.0"
+		"marked": "^10.0.0",
+		"xterm": "^5.3.0"
 	}
 }
